<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="store">Store</string>
    <string name="quit">Quit</string>
    <string name="start_game">Start</string>
    <string name="go_back">Back</string>

    <string name="hello_first_fragment">Welcome to our new game</string>
    <string name="hello_second_fragment">This will be the settings Arg: %1$s</string>
    <string name="store_main_text">We will implement a store if we have time</string>
    <string name="title_activity_usercar">usercar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>